@@ -107,6 +107,9 @@ the tree of files on the remote, even when importing into a subdirectory.
   Use this option to specify a commit message for the changes that have
   been made to the special remote since the last import from it.
 
+  If multiple -m options are given, their values are concatenated
+  as separate paragraphs.
+
 # IMPORTING FROM A DIRECTORY
 
 When run with a path, `git annex import` **moves** files from somewhere outside
